add chinatime support

--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -201,8 +201,8 @@
 - 法官
 
 ## articles
-### 2017/01/08 GMT0+8:00 http://upmedia.mg/pj2_news_info.php?SerialNo=10121
-- <h2><a href="http://upmedia.mg/pj2_news_info.php?SerialNo=10121" target="_blank">「民主」不是支持陪審制的好理由</a></h2> #孫健智 #法官 #第四組 #人民參與審判 #其他平台 #2017-01-08
+### 2017/01/08 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=10121
+- <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=10121" target="_blank">「民主」不是支持陪審制的好理由</a></h2><p>日前鄭文龍律師接受電子媒體訪問，以「德國二戰前是專制體制，它的司法會多好？」等理由，力挺英美制「陪審團」，更說出「若走德制就是『巫師制度』」的重話。果然，新聞一出，在向來以歐陸法系為師、推崇德、日等國的台灣法學界，引起不少反彈。</p><p>鄭律師向來推崇英美式陪審制審判，他在這方面的堅持，有口皆碑。筆者同樣支持人民參與審判，尤其支持陪審制，筆者幾年前撰寫司法院年度研究報告時，也曾經參考鄭律師關於陪審團的著作。正因為如此，筆者認為，無論最終的制度設計為何，都必須要在正確的認知、適切的法律原則、清楚的政策目的上，推動人民參與審判。畢竟，再好、再對的制度，也不該拿錯誤的理由為它辯護。</p><p>就拿「民主的美國vs（戰前）專制的德國」這個對比來說。在台灣，陪審制往往跟民主劃上等號，然而，兩者之間其實沒有太大的關聯。我曾經在研究報告裡，透過非常艱澀的法學理論來說明這一點。但我們今天不談理論，我們來談談經驗，人類的經驗，也就是歷史。</p><p>作為王權工具的英國陪審制</p><p>陪審團的起源，一般認為是11世紀，英王威廉一世（征服者威廉）為了搞清楚自己統治多少土地、人口、多少雞鴨豬狗牛羊所進行的大規模調查，調查方法之一，就是讓各村莊的人民宣誓，擔保資訊內容的正確，調查報告名為「末日審判書」（Domesday Book），書名暗示，用來擔保資訊內容的宣誓，就像在末日審判的宣誓一樣誠實。</p><p>這種「以宣誓擔保資訊正確」的方法，在一個世紀後，亨利二世在位期間，發展成陪審團的前身。亨利二世即位時，英格蘭剛結束長達20年的內戰，長期內戰造成地權關係的混亂，而在封建制度下，混亂的地權關係就會導致混亂的政治秩序，進而損及王室權威。在亨利二世手上，陪審團成為釐清地權（進而維護王權）的工具：如果有人宣稱自己的土地遭到強占，在一定的前提要件下，他可以請求國王頒佈令狀，按令狀規定，從土地所屬的村莊裡挑出一群人，請他們宣誓，並由他們證明：（1）土地本來是不是在原告手上？（2）被告有沒有強奪原告的土地？</p><p>此外，亨利二世發佈的「克倫敦詔令」規定，由郡縣城鎮居民組成的「公訴陪審團」，得經過宣誓指出涉犯搶劫、謀殺與竊盜罪嫌者，將他們提交給法院審判，這就是大陪審團的前身；後來，亨利二世的兒子理查一世（獅心王理查）與約翰王（無地王約翰）接續繼位，他們在位期間，演變出公訴陪審團的全部或一部成員，繼續參與後面的審判程序、定罪處刑的作法，我們今天看到的陪審制，至此大致成形。</p><p>至少在封建制度廢止之前，陪審團的主要角色，非但不是保障民權，反而是維護秩序、擴張王權；事實上，當時的英格蘭，根本就沒有民主這種東西，陪審團卻是從這樣的時空發展出來的。</p><p>戰前德日帝國的陪審制</p><p>即使我們不談中世紀的陳年往事，在近現代，陪審制也未必跟民主有太大的關聯。無巧不巧，德國、日本曾經施行的陪審制，恰好就是例證。</p><p>是的，在著名的德國參審制面世之前，陪審制就已經立於德意志的大地之上了！在19世紀初，拿破崙的征服與占領，將法國在革命期間所採用的陪審制，引進歐洲各地，包括後來成為德國的地區。1870年德國統一之後，參審制跟陪審制仍是雙軌併存，那個德國，是威廉一世跟俾斯麥的德國，當然不是民主國家。</p><p>在1928年至1943年間，日本也曾經施行陪審制。日本政府原本打算，利用陪審制來證明日本是個民主國家（這樣它才能加入國際聯盟），事與願違的是，在大正末年、昭和初期，急速抬頭的軍國主義也感染了陪審制，日本陪審員協會出版的《陪審員手冊》更宣稱：「以最謙卑的態度，奉天皇陛下之名，在進行審判程序的神聖法庭中擔任陪審員，是能與在皇軍服役相提並論的偉大榮譽與責任。」這個日本，怎麼會是民主國家呢？</p><p>美國陪審制中的種族歧視與性別歧視</p><p>終於要講到陪審制的支持者最愛的美國了。陪審制隨著殖民活動，而從英格蘭渡海來到北美大陸，「美國是民主國家」這回事，在美國獨立、美國這個國家誕生之前，當然是說不通的，但即使在美國獨立之後，我們現在所理解的民主也還不存在。畢竟，當時的美國，還沒有把黑人當成一個完整的人，女人也還沒能享有投票權。</p><p>在南北戰爭之後，各州已經普遍允許黑人擔任陪審員。然而，法律可以拒絕為歧視服務，歧視卻不會因此消滅，在種族歧視的政治現實下，陪審團的種族成分可能影響審判的公平性，這樣的疑慮有其依據；而藉由操控陪審員的種族成分、進而操控判決結果的危險，也確實存在，辛普森案即是近例。</p><p>這樣的疑慮與危險，終於釀成了憲法爭議：檢察官藉由不附理由排除（註）把黑人排除在陪審團之外，進而將黑人被告定罪的作法，有沒有牴觸美國憲法？令人訝異的是，在1965年的Swain v. Alabama案，聯邦最高法院的答案是「沒有」──這是二戰之後，也是南北戰爭結束百年之後─直到1986年的Batson v. Kentucky案，聯邦最高法院才變更見解，改判定這種作法違反平等保障條款。</p><p>同樣地，在20世紀的美國，女性坐上陪審席的路途，仍然曲曲折折。一方面，各州雖已普遍允許女性擔任陪審員，但另一方面，法律上並不鼓勵、甚至軟性地勸阻女性擔任陪審員。好幾個州立法規定，有意願擔任陪審員的女性必須主動前來登記，沒有登記的女性就不會被選任為陪審員；麻塞諸塞州曾經規定，就案情而言，倘聽取證詞或參與討論會讓女性感到尷尬，則女性得豁免陪審義務；紐約州更是挑明了，光是「身為女性」本身，就已經是豁免事由。</p><p>這些規定，都透露出「女人最好不要來當陪審員」的訊息，更糟糕的是，在1961年的Hoyt v. Florida案，聯邦最高法院判定，專為女性設置豁免事由，並不違憲，理由在於，強制女性擔任陪審員，恐怕有損女性作為家庭生活的中心的角色。直到1975年的Taylor v. Louisiana案，聯邦最高法院才改變這種假溫情、真父權的立場。</p><p>對症下藥 才是真改革</p><p>「德國二戰前是專制體制，它的司法會多好？」嗯，如果是這樣，「美國『二戰後』還在歧視女性／黑人陪審員，它的司法會多好？」豈非同理可證？從另一個角度來說，大日本帝國也有陪審制，德意志帝國也有陪審制─唉呀！就連中國也有人民陪審員，它們何曾是民主國家呢？</p><p>我希望這些反例足以說明，有些國家是民主國家，但它們沒有陪審制；有些國家是專制國家，但他們有陪審制。陪審制、參審制，或任何形式的人民參與審判，都跟一個國家民主與否沒有太大的關聯。</p><p>再好、再對的制度，也不該拿錯誤的理由為它辯護。不只是陪審制，未來可能採行的任何制度，也是一樣的，對於號稱正要進行司法改革的台灣尤其如此，因為，錯誤的理由，就表示沒有對症下藥。</p><p>註：在挑選陪審員的程序中，當事人可以附理由請求排除有偏見或不適任的候選陪審員，法官必須判斷當事人的請求是否合理，並決定是否排除特定候選陪審員。在一定條件下，當事人也可以行使不附理由排除（peremptory challenge）的權利，不附理由、也不待法官判斷，只要提出聲請，就自動排除候選陪審員。不附理由排除的要件跟次數，各州有不同規定。</p> #孫健智 #法官 #第四組 #人民參與審判 #上報 #2017-01-08
 
 # 林瑋婷
 ## backgrounds
@@ -1294,7 +1294,7 @@
 
 ## articles
 ### 2017/03/07 GMT0+8:00 http://opinion.chinatimes.com/20170307006683-262105
-- <h2><a href="http://opinion.chinatimes.com/20170307006683-262105" target="_blank">第四審？／林騰鷂》假法官不能審判真法官</a></h2> #林騰鷂 #律師 #第二組 #憲法訴願 #其他平台 #2017-03-07
+- <h2><a href="http://opinion.chinatimes.com/20170307006683-262105" target="_blank">第四審？／林騰鷂》假法官不能審判真法官</a></h2><p>司改國是會議第2分組會議6日做成重要決議，將為敗訴確定的民眾開闢一條救濟途徑，即訴訟當事人認為確定裁判中的法律「見解」有違憲疑慮時，可聲請大法官審查，若大法官認定該見解違憲，可將個案發回重新審理。針對此一變革，部分與會委員表示，我國訴訟向採三級三審制，若採此「裁判憲法審查制度」，大法官恐成為訴訟「第四審」，如有大量個案當事人聲請，將會癱瘓大法官會議，而發生一名前大法官所說的「會造成司法崩盤的災難」。</p><p>此因最高法院1年的案子高達8000到1萬件，如果每案在最高法院判決確定後，當事人可再去聲請釋憲，則僅有15位大法官的大法官會議能處理嗎？有辦法做出高品質的釋憲案嗎？此外，司法院曾在民國104年6月17日發布新聞稿，反對設立「裁判憲法審查制度」，且稱憲法設立釋憲制度之本旨，是授與釋憲機關從事規範審查，不及於具體處分行為違憲或違法之審理。今日司法院要改弦易轍，要建構「裁判憲法審查制度」不只需要修正《司法院大法官審理案件法》、《司法院組織法》、各種法院組織法，且不能迴避憲法的修正，這將會造成修法的大災難！</p><p>又依《司法院組織法》第四條規定，大法官的成員並非均有實任法官、實任檢察官之資格，僅有律師、教授及研究法學，富有政治經驗者亦可擔任大法官。是以大法官並非是民間所認知的真正法官，而是比一般法院法官更具有政治性的「假法官」，若將來由這些比一般法院更容易受到政治影響的「假法官」，來組成憲法法庭，審查真正法官確定判決的個案，其實更會引起民眾疑慮政治力介入。這也難怪同是司改國是會議委員的台中高分院法官張升星質疑「裁判憲法審查制度」可能會成為第四審，並稱擔心黨政高層派「老綠男」來清除「黨國餘孽，司法敗類」！</p><p>另外，在我國有法律效力的《公民與政治權利國際公約》第十四條規定：「人人在法院或法庭之前，悉屬平等。任何人受刑事控告或因其權利義務涉訟須予判定時，應有權受獨立無私之法定管轄法庭公正公開審問。」因此，若以非「獨立無私之法定管轄法庭」之大法官，來建構「裁判憲法審查制度」，則也將違反普世的國際人權公約。</p><p>建構大法官「裁判憲法審查制度」的構想源自於美國聯邦最高法院及德國聯邦憲法法院之建制，但卻忽略了這兩個法院的法官均具有真正法官的資格與經驗。因此，司改國是會議委員要以多數不具備真正法官資格與經驗的「假法官」來從事「裁判憲法審查」，是有違憲、違反國際人權公約的疑慮。</p><p>（作者為律師）</p> #林騰鷂 #律師 #第二組 #憲法訴願 #中國時報 #2017-03-07
 
 # 林彥良
 ## backgrounds
